--- a/BusinessCardProject/Client/BusinessCardProject.Client/Pages/Home.razor
+++ b/BusinessCardProject/Client/BusinessCardProject.Client/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@page "/home"
 @using BusinessCardProject.Client.Services.ProjectInfoService
 @inject ProjectInfoGlobalClass ProjectInfoGlobal
 
