Изменения по работе дизайна, доработка и разработка страниц

--- a/BusinessCardProject/Client/BusinessCardProject.Client/Pages/AdminPanelPages/MainAdmin.razor
+++ b/BusinessCardProject/Client/BusinessCardProject.Client/Pages/AdminPanelPages/MainAdmin.razor
@@ -1,6 +1,6 @@
 ﻿@page "/admin-panel"
-@using BusinessCardProject.Client.Pages.AdminPanels.AdminEnums
-@using BusinessCardProject.Client.Pages.AdminPanels.AdminСomponents
+@using BusinessCardProject.Client.Pages.AdminPanelPages.Enum
+@using BusinessCardProject.Client.Pages.AdminPanelPages.Сomponents
 
 <PageTitle>Панель-администратора</PageTitle>
 
