--- a/BusinessCardProject/Client/BusinessCardProject.Client/Layout/MainLayout.razor
+++ b/BusinessCardProject/Client/BusinessCardProject.Client/Layout/MainLayout.razor
@@ -1,10 +1,11 @@
 ﻿@using BusinessCardProject.Client.Services.ProjectInfoService
+@using BusinessCardProject.Client.Services.ProjectInfoService.Classes
 @inherits LayoutComponentBase
-@inject ProjectInfoGlobalClass ProjectInfoGlobal
 @inject HttpClient HttpClient
-@inject IJSRuntime JsRuntime
+@inject UserSettingService UserSetting
+@implements IDisposable
 
-<MudThemeProvider Theme="_theme" IsDarkMode="_isDarkMode"/>
+<MudThemeProvider Theme="_theme" IsDarkMode="UserSetting.Settings.IsDark"/>
 <MudPopoverProvider/>
 <MudDialogProvider/>
 <MudSnackbarProvider/>
@@ -14,7 +15,7 @@
                        OnClick="@(_ => DrawerToggle())"/>
         <MudLink Href="" Underline="Underline.None">
             <MudText Typo="Typo.h5" Class="ml-3" Style="font-weight: bold" Color="@_color">
-                @ProjectInfoGlobal.ProjectName
+                @ProjectInfoGlobalClass.ProjectName
             </MudText>
         </MudLink>
         <MudSpacer/>
@@ -68,7 +69,8 @@
                          Label="Выход"/>
         </MudMenu>
     </MudAppBar>
-    <MudDrawer id="nav-drawer" @bind-Open="_drawerOpen" Breakpoint="Breakpoint.None" ClipMode="DrawerClipMode.Always"
+    <MudDrawer id="nav-drawer" @bind-Open="UserSetting.Settings.IsDrawerOpen" Breakpoint="Breakpoint.None"
+               ClipMode="DrawerClipMode.Always"
                Elevation="4">
         <NavMenu/>
     </MudDrawer>
@@ -80,24 +82,23 @@
 @code {
 
     //Переменные фреймворка по умолчанию
-    private bool _drawerOpen;
-    private bool _isDarkMode;
     private Color _color;
     private MudTheme? _theme;
 
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-
-        var storageResult = await JsRuntime.InvokeAsync<string>("localStorage.getItem", "isDarkMode");
-        if (bool.TryParse(storageResult, out var isDarkMode))
+        /*Инициализация глобальных настроек пользователя*/
+        if (UserSetting.Settings.UpdateTime == null)
         {
-            _isDarkMode = isDarkMode;
+            await UserSetting.LoadAsync();
+            UserSetting.Settings.UpdateTime = DateTime.Now;
+            await UserSetting.SaveAsync();
         }
+        //TODO: Сделать загрузку UserSettings из БД
+        UserSetting.OnChange += StateHasChanged;
 
-        _drawerOpen = false;
-        _color = isDarkMode ? Color.Info : Color.Dark;
-
+        _color = UserSetting.Settings.IsDark ? Color.Info : Color.Dark;
         _theme = new()
         {
             PaletteLight = _lightPalette,
@@ -113,7 +114,7 @@
     /// </summary>
     private void DrawerToggle()
     {
-        _drawerOpen = !_drawerOpen;
+        UserSetting.Settings.IsDrawerOpen = !UserSetting.Settings.IsDrawerOpen;
     }
 
     /// <summary>
@@ -121,10 +122,10 @@
     /// </summary>
     private async Task DarkModeToggle()
     {
-        _isDarkMode = !_isDarkMode;
-        _color = _isDarkMode ? Color.Info : Color.Dark;
-
-        await JsRuntime.InvokeVoidAsync("localStorage.setItem", "isDarkMode", _isDarkMode.ToString());
+        UserSetting.Settings.IsDark = !UserSetting.Settings.IsDark;
+        _color = UserSetting.Settings.IsDark ? Color.Info : Color.Dark;
+        
+        await UserSetting.SaveAsync();
     }
 
     private readonly PaletteLight _lightPalette = new()
@@ -166,7 +167,7 @@
         OverlayLight = "#1e1e2d80",
     };
 
-    public string DarkLightModeButtonIcon => _isDarkMode switch
+    public string DarkLightModeButtonIcon => UserSetting.Settings.IsDark switch
     {
         true => Icons.Material.Filled.WbSunny,
         false => Icons.Material.Outlined.DarkMode,
@@ -174,4 +175,8 @@
 
     #endregion
 
+    public void Dispose()
+    {
+        UserSetting.OnChange -= StateHasChanged;
+    }
 }
