--- a/BusinessCardProject/Client/BusinessCardProject.Client/Layout/NavMenu.razor
+++ b/BusinessCardProject/Client/BusinessCardProject.Client/Layout/NavMenu.razor
@@ -1,24 +1,37 @@
 ﻿<MudNavMenu>
     <MudNavMenu Class="mud-width-full mud-navmenu mud-navmenu-margin-none">
-        <MudNavLink Href="/home" Class="mud-nav-item mt-1" Icon="@Icons.Material.Rounded.Home">
+        <MudNavLink Href="/home" 
+                    Class="mud-nav-item mt-1" 
+                    Icon="@Icons.Material.Rounded.Home">
             Главная
         </MudNavLink>
         <MudDivider Class="my-1"/>
         <MudNavGroup Title="Уроки" Icon="@Icons.Material.Rounded.ShowChart" Expanded="false">
-            <MudNavLink Href="/video-courses" Class="mud-nav-item" Icon="@Icons.Material.Rounded.Article">
+            <MudNavLink Href="/video-courses" 
+                        Class="mud-nav-item" 
+                        Icon="@Icons.Material.Rounded.Article">
                 Лекции
             </MudNavLink>
-            <MudNavLink Href="/video-courses" Class="mud-nav-item" Icon="@Icons.Material.TwoTone.PersonalVideo">
+            <MudNavLink Href="/video-courses" 
+                        Class="mud-nav-item" 
+                        Icon="@Icons.Material.TwoTone.PersonalVideo">
                 Видео
             </MudNavLink>
         </MudNavGroup>
-        <MudNavLink Href="/rate" Class="mud-nav-item" Icon="@Icons.Material.Rounded.StarRate">
+        <MudNavLink Href="/rate" 
+                    Class="mud-nav-item" 
+                    Icon="@Icons.Material.Rounded.StarRate">
             Отзывы
+        </MudNavLink>
+        <MudNavLink Href="/donation-project" 
+                    Class="mud-nav-item" 
+                    Icon="@Icons.Material.Rounded.AttachMoney">
+            Поддержать проект
         </MudNavLink>
     </MudNavMenu>
 </MudNavMenu>
 
 @code
 {
-    
+
 }
