--- a/BusinessCardProject/Client/BusinessCardProject.Client/Pages/PoliciesPages/UserAgreement.razor
+++ b/BusinessCardProject/Client/BusinessCardProject.Client/Pages/PoliciesPages/UserAgreement.razor
@@ -1,12 +1,11 @@
 ﻿@page "/user-agreement"
-@using BusinessCardProject.Client.Services.ProjectInfoService
-@inject ProjectInfoGlobalClass ProjectInfoGlobal
+@using BusinessCardProject.Client.Services.ProjectInfoService.Classes
 
 <PageTitle>Пользовательское соглашение</PageTitle>
 
 <MudContainer MaxWidth="MaxWidth.Medium">
     <MudText Typo="Typo.h4" Align="Align.Justify" GutterBottom="true" Class="mt-4 mb-4">
-        <b>Пользовательское соглашение сайта @ProjectInfoGlobal.ProjectLink</b>
+        <b>Пользовательское соглашение сайта @ProjectInfoGlobalClass.ProjectLink</b>
     </MudText>
 
     @*1 Пункт*@
@@ -17,7 +16,7 @@
     <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
         <b>1.1.</b> Пользовательское соглашение (далее – «Соглашение») является публичной офертой и определяет условия
         использования материалов и сервисов, размещенных Администратором на сайте в сети Интернет по адресу:
-        <b>@ProjectInfoGlobal.ProjectLink</b> (далее – «Сайт») пользователями при помощи Сервиса.
+        <b>@ProjectInfoGlobalClass.ProjectLink</b> (далее – «Сайт») пользователями при помощи Сервиса.
     </MudText>
 
     <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
@@ -30,8 +29,8 @@
     <MudText Typo="Typo.body1" Align="Align.Justify" GutterBottom="true">
         <b>1.3.</b> Администратором является частное
         лицо
-        <b>@ProjectInfoGlobal.ProjectOwnerSurname @ProjectInfoGlobal.ProjectOwnerName @ProjectInfoGlobal.ProjectOwnerPatronymic</b>,
-        почта: <b>@ProjectInfoGlobal.ProjectOwnerEmail</b>, ИНН: <b>@ProjectInfoGlobal.ProjectOwnerINN</b>
+        <b>@ProjectInfoGlobalClass.ProjectOwnerSurname @ProjectInfoGlobalClass.ProjectOwnerName @ProjectInfoGlobalClass.ProjectOwnerPatronymic</b>,
+        почта: <b>@ProjectInfoGlobalClass.ProjectOwnerEmail</b>, ИНН: <b>@ProjectInfoGlobalClass.ProjectOwnerINN</b>
         действующий как самозанятый
         (далее – "Администратор").
     </MudText>
